--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.driverUrl=jdbc:mysql://localhost:3306/d_ssm_pujinziben?useUnicode=true&amp;characterEncoding=utf-8&amp;useSSL=false
+jdbc.driverUrl=jdbc:mysql://192.168.3.123:3306/d_ssm_pujinziben?useUnicode=true&amp;characterEncoding=utf-8&amp;useSSL=false
 jdbc.user=root
-jdbc.password=123456
+jdbc.password=root
 
 druid.initialSize=5
 druid.maxActive=100
