每季度投资奖励发放

--- a/pom.xml
+++ b/pom.xml
@@ -239,6 +239,18 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
         <!--秒嘀-->
         <dependency>
             <groupId>commons-codec</groupId>
@@ -250,6 +262,16 @@
             <groupId>cn.songxinqiang</groupId>
             <artifactId>com.baidu.ueditor</artifactId>
             <version>${uEditor.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
         </dependency>
 
     </dependencies>
