--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -1,5 +1,5 @@
 jdbc.driverLocation=C:\\Users\\mh\\.m2\\repository\\mysql\\mysql-connector-java\\5.1.44\\mysql-connector-java-5.1.44.jar
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.connectionURL=jdbc:mysql://192.168.3.123:3306/d_ssm_pujinziben?useUnicode=true&amp;characterEncoding=UTF8
-jdbc.userId=root
+jdbc.connectionURL=jdbc:mysql://192.168.3.126:3306/d_ssm_pujinziben?useUnicode=true&amp;characterEncoding=UTF8
+jdbc.user=root
 jdbc.password=root
